# Flask_gb

./: Dockerfile  README.md  pyproject.toml  requirements.txt
blog/: app.py  blog1.db  configs.py
blog/api/: __init__.py  author.py
blog/forms/: user.py
blog/models/: article.py  tag.py  user.py
blog/templates/: base.html  index.html
blog/templates/articles/: create.html  details.html  list.html
blog/templates/auth/: login.html
blog/templates/authors/: list.html
blog/templates/macro/: formhelpers.html
blog/templates/users/: details.html  list.html
blog/views/: articles.py  auth.py  users.py
