[tool.poetry]
name = "flask-gb"
version = "0.1.0"
description = ""
authors = ["Alexey Ryzhkov <aler32@mail.ru>"]
readme = "README.md"
packages = [{include = "flask_gb"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
